--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ali-oss": "^6.0.1",
     "debug": "^2.6.3",
     "ip": "^1.1.5",
+    "jsonwebtoken": "^8.3.0",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
@@ -23,6 +24,7 @@
     "koa-static": "^3.0.0",
     "koa-swagger-decorator": "^1.5.9",
     "koa-views": "^5.2.1",
+    "koa2-cors": "^2.0.6",
     "log4js": "^3.0.5",
     "moment": "^2.22.2",
     "mongoose": "^5.3.2",
