--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^3.5.1",
     "koa-logger": "^2.0.1",
     "koa-oauth-server": "^1.0.1",
     "koa-onerror": "^1.2.1",
@@ -24,7 +25,6 @@
     "koa-static": "^3.0.0",
     "koa-swagger-decorator": "^1.5.9",
     "koa-views": "^5.2.1",
-    "koa2-cors": "^2.0.6",
     "log4js": "^3.0.5",
     "moment": "^2.22.2",
     "mongoose": "^5.3.2",
