--- a/package.json
+++ b/package.json
@@ -11,27 +11,21 @@
   "dependencies": {
     "ali-oss": "^6.0.1",
     "debug": "^2.6.3",
-    "ip": "^1.1.5",
     "jsonwebtoken": "^8.3.0",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
-    "koa-convert": "^1.2.0",
+    "koa-docs": "^2.1.0",
     "koa-json": "^2.0.2",
     "koa-jwt": "^3.5.1",
     "koa-logger": "^2.0.1",
-    "koa-oauth-server": "^1.0.1",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
-    "koa-swagger-decorator": "^1.5.9",
     "koa-views": "^5.2.1",
     "log4js": "^3.0.5",
     "moment": "^2.22.2",
     "mongoose": "^5.3.2",
-    "oauth2-server": "^3.0.1",
-    "pug": "^2.0.0-rc.1",
-    "qiniu": "^7.2.1",
-    "tracer": "^0.9.1"
+    "qiniu": "^7.2.1"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
